--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   <!-- FOOTER -->
   <footer class="site-footer">
     © <?= date('Y') ?> PRCF Indonesia | 
-    <a href="https://prcfindonesia.org" target="_blank">Official Website</a>
+    <a href="https://prcfindonesia.org" target="blank">Official Website</a>
   </footer>
 </body>
 </html>
